# LibLip

./: Multivariate+approximation+of+scattered+data+with+Lipschitz+functions.maple  README.md
example/: exampleprocedural.c  liblipex.cpp  liblipex1.cpp  lipaptest.cpp  lipclasstest.cpp
linuxmanual/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  lipinstall
linuxmanual/src/: Makefile.am  Makefile.in  forest.h  interpol.cpp  liblip.cpp  liblip.h  liblipc.h  slipint.cpp
linuxmanual/src/glpk/: glpdmp.h  glpiet.h  glpinv.c  glpios.h  glpios3.c  glpipm.h  glpk.h  glplib.h  glplib1b.c  glplib2.c  glplib3.c  glplpp.h  glplpp1.c  glplpp2.c  glplpx.h  glplpx1.c  glplpx2.c  glplpx3.c  glplpx6a.c  glplpx6b.c  glplpx6d.c  glplpx8a.c  glplpx8b.c  glplpx8d.c  glplpx8e.c  glpluf.c  glpmip.h  glpmip1.c  glpmpl3.c  glpmpl4.c  glpqmd.c  glprng.c  glpspx2.c  glpstr.c  glptsp.c
linuxmanual/src/tnt/: tnt_version.h
maple/: aluminiumdata.txt
maple/MacOSX/: forest.h  interpol.h  liblipc.h  libliptest.mw  makefile  maplec.h  mwrap_dliblip.c
maple/linux/: makefile
matlab/: aluminiumdata.txt  boundlow.m  boundup.m  build.m  example1.m  example2.m  example3.m  example4.m  example5.m  matlabliblip.c  mlliblip.mexw64  readme  testf.m  testf1.m
matlab/glpk-4.10/: ChangeLog  NEWS  README  configure  configure.in  d32dmc.mak  w32bc5.mak  w32vc6.mak  w32vc6d.def  w32vc6d.mak  w32vcStudio.dsp  w32vcStudio.dsw
matlab/src/: forest.cpp  interpol.cpp  liblip.cpp  liblip.h  lk.bat  makefile.txt  matlabliblip.c  slipint.h  (+2 more)
(+78 files in other folders)
